force-app/main/default/objects/Contact/fields/QCC_TECH_HomePhoneCountryCode__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_HomePhoneCountryCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Phone Country Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>