force-app/main/default/objects/Contact/fields/QCC_TECH_HomePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_HomePhoneNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Home Phone Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>