force-app/main/default/objects/Contact/fields/QCC_TECH_Loyalty_Point_Type__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Loyalty_Point_Type__c</fullName>
    <description>This is used to determine what Loyalty Status Bonus to send as SMS notification.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is used to determine what Loyalty Status Bonus to send as SMS notification.</inlineHelpText>
    <label>QCC TECH Loyalty Point Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>