force-app/main/default/objects/Contact/fields/QCC_TECH_MailingStreetBusinessLineOne__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_MailingStreetBusinessLineOne__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingStreet Business Line One</label>
    <type>TextArea</type>
</CustomField>