force-app/main/default/objects/Contact/fields/QCC_TECH_MailingStreetBusinessLineTwo__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_MailingStreetBusinessLineTwo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingStreet Business Line Two</label>
    <type>TextArea</type>
</CustomField>