force-app/main/default/objects/Contact/fields/QCC_TECH_MailingStreetHomeLineOne__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_MailingStreetHomeLineOne__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingStreet Home Line One</label>
    <type>TextArea</type>
</CustomField>