force-app/main/default/objects/Contact/fields/QCC_TECH_Member_Tier_Downgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_Member_Tier_Downgrade_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QCC TECH Member Tier Downgrade Date</label>
    <type>Date</type>
</CustomField>