force-app/main/default/objects/Contact/fields/QCC_TECH_MobilePhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_MobilePhoneAreaCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Phone Area Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>