force-app/main/default/objects/Contact/fields/QCC_TECH_RecordType__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_RecordType__c</fullName>
    <description>Populated automatically for Individual Contact record to be used in enforcing matching rules</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QCC TECH RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>