force-app/main/default/objects/Contact/fields/QCC_TECH_TravelSMSPhoneAreaCode__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_TravelSMSPhoneAreaCode__c</fullName>
    <description>Value comes from the Loyalty platform event reflecting the customer&apos;s preferred SMS area code for day-prior communication</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel SMS Phone Area Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>