force-app/main/default/objects/Contact/fields/QCC_TECH_TravelSMSPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>QCC_TECH_TravelSMSPhoneNumber__c</fullName>
    <description>Value comes from the Loyalty platform event reflecting the customer&apos;s preferred SMS phone number for day-prior communication</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel SMS Phone Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>