force-app/main/default/objects/Contact/fields/QCC_Tier_Effective_Tier__c.field-meta.xml
<CustomField>
    <fullName>QCC_Tier_Effective_Tier__c</fullName>
    <description>This is populated by Pre-Departure payload.</description>
    <inlineHelpText>This is populated by Pre-Departure payload.</inlineHelpText>
    <label>Tier Effective Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FFLP</fullName>
                <label>Lifetime Platinum</label>
            </value>
            <value>
                <fullName>CLLP</fullName>
                <label>Chairmans Lounge Platinum One</label>
            </value>
            <value>
                <fullName>CLQF</fullName>
                <label>Chairmans Lounge</label>
            </value>
            <value>
                <fullName>Lifetime Platinum_x</fullName>
                <isActive>false</isActive>
                <label>Lifetime Platinum_x</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>