force-app/main/default/objects/Contact/fields/QCC_Top_Platinum_One__c.field-meta.xml
<CustomField>
    <fullName>QCC_Top_Platinum_One__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be checked for FF customers who are on the Top 100. If set to TRUE AND Day Prior Contact = &quot;No Contact&quot; AND Cabin = P, then customer won&apos;t receive First Host Pre-Flight email notification</description>
    <label>Top Platinum One</label>
    <type>Checkbox</type>
</CustomField>