force-app/main/default/objects/Contact/fields/QCC_Travel_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>QCC_Travel_Country_Code__c</fullName>
    <description>The country code populated by iFly to send the Qantas Host SMS.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Country Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>