force-app/main/default/objects/Contact/fields/QCC_Travel_Email__c.field-meta.xml
<CustomField>
    <fullName>QCC_Travel_Email__c</fullName>
    <description>Value comes from the Loyalty platform event reflecting the customer&apos;s preferred email address for sending day-prior communication</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email address that will be used in sending the day-prior Qantas Host communication</inlineHelpText>
    <label>Travel Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>