force-app/main/default/objects/Contact/fields/QCC_Travel_SMS__c.field-meta.xml
<CustomField>
    <fullName>QCC_Travel_SMS__c</fullName>
    <description>Value is populated automatically by the combination of Travel SMS Phone Country Code, Travel SMS Phone Area Code and Travel SMS Phone Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The SMS number that will be used in sending the day-prior Qantas Host communication</inlineHelpText>
    <label>Travel SMS</label>
    <type>Phone</type>
</CustomField>