force-app/main/default/objects/Contact/fields/QCCLounges__c.field-meta.xml
<CustomField>
    <fullName>QCCLounges__c</fullName>
    <formula>&quot;&amp;sessionid=&quot; + $Api.Session_ID + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a0X9000000HWK7qEAH&quot; + 
&quot;&amp;&amp;EmailTemplateId=a0V9000000SCNTIEA5&quot;+ 
&quot;&amp;emailrelatedtoid=&quot; + Id + 
&quot;&amp;emailsubject=Qantas Customer Care- Compliments received between &quot;+ TEXT(TODAY()-7) +&quot;--&quot;+TEXT(TODAY()-1) + 
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;ds7preview=1&quot; + 
&quot;&amp;bml=Please Wait&quot; + 
&quot;&amp;queryid=a0W9000000vhB8mEAE&quot; + 
&quot;&amp;ofn=QCC Lounges Report&quot; + TEXT(TODAY()-7) +&quot;--&quot;+TEXT(TODAY()-1) + 
&quot;&amp;sf1=1&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;ac1=EmailSubject&quot;+
&quot;&amp;emailtoId=&quot; +Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QCC Lounges</label>
    <type>Text</type>
</CustomField>