force-app/main/default/objects/Contact/fields/QIC_Number__c.field-meta.xml
<CustomField>
    <fullName>QIC_Number__c</fullName>
    <description>This field will be deleted after live chat is migrated to QAC form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>QIC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>