force-app/main/default/objects/Contact/fields/qualtrics__QSC_Permalink__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Permalink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QSC Permalink</label>
    <type>Url</type>
</CustomField>