force-app/main/default/objects/Contact/fields/Related_ABN__c.field-meta.xml
<CustomField>
    <fullName>Related_ABN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>related_abn</label>
    <length>18</length>
    <type>Text</type>
</CustomField>