force-app/main/default/objects/Contact/fields/Relationship_ID__c.field-meta.xml
<CustomField>
    <fullName>Relationship_ID__c</fullName>
    <description>Field for Data Migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>