force-app/main/default/objects/Contact/fields/Schedule_Sensitive_Message__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Sensitive_Message__c</fullName>
    <description>CRM-8645 This field is used to store schedule date and time for sensitive message.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Schedule Sensitive Message</label>
    <type>DateTime</type>
</CustomField>