force-app/main/default/objects/Contact/fields/Sensitive_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a sensitive contact? Do we want to restrict visibility of this contact to VIP/CCAT only?</description>
    <label>Sensitive Contact</label>
    <type>Checkbox</type>
</CustomField>