force-app/main/default/objects/Contact/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <defaultValue>&apos;CAP&apos;</defaultValue>
    <description>Indicates the origin of this contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>18</length>
    <type>Text</type>
</CustomField>