force-app/main/default/objects/Contact/fields/Sports_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Sports_Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sports Additional Information</label>
    <type>TextArea</type>
</CustomField>