force-app/main/default/objects/Contact/fields/SSU__c.field-meta.xml
<CustomField>
    <fullName>SSU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Corporate: Special Service Unit -This person&apos;s travel / relationship is overseen by the special service unit</inlineHelpText>
    <label>SSU</label>
    <type>Checkbox</type>
</CustomField>