force-app/main/default/objects/Contact/fields/Status_Credits__c.field-meta.xml
<CustomField>
    <fullName>Status_Credits__c</fullName>
    <description>Contact&apos;s Frequent Flyer Status Credits balance</description>
    <label>Status Credits</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>