force-app/main/default/objects/Contact/fields/TECH_previousIds__c.field-meta.xml
<CustomField>
    <fullName>TECH_previousIds__c</fullName>
    <description>QCC: This is used to temporarily store a contact previous customer Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TECH_previousIds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>