force-app/main/default/objects/Contact/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <description>deletethis replaced by membership tier</description>
    <label>Tier (deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>