force-app/main/default/objects/Contact/fields/Tier_Conga__c.field-meta.xml
<CustomField>
    <fullName>Tier_Conga__c</fullName>
    <formula>IF( 
CONTAINS(UPPER(TEXT(Profile_Membership_Current_Tier__c )),&quot;GOLD&quot;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp;&quot;resource/TierSystem/Gold.PNG&quot;, 

IF(CONTAINS(UPPER(TEXT(Profile_Membership_Current_Tier__c )),&quot;SILVER&quot;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp;&quot;resource/ContactTier/Silver.PNG&quot;, 

IF(CONTAINS(UPPER(TEXT(Profile_Membership_Current_Tier__c )),&quot;PLATINUM ONE&quot;),LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp;&quot;resource/TierSystem/Platinumone.png&quot;,

IF(CONTAINS(UPPER(TEXT(Profile_Membership_Current_Tier__c )),&quot;BRONZE&quot;), LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp;&quot;resource/ContactTier/Bronze.PNG&quot;,

IF(CONTAINS(UPPER(TEXT(Profile_Membership_Current_Tier__c )),&quot;PLATINUM&quot;), LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
&amp;&quot;resource/TierSystem/Platinum.png&quot;,
&quot;&quot;)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Conga [System]</label>
    <type>Text</type>
</CustomField>