force-app/main/default/objects/Contact/fields/Tier_loyalty__c.field-meta.xml
<CustomField>
    <fullName>Tier_loyalty__c</fullName>
    <description>deletethis</description>
    <formula>CASE( 
UPPER(TEXT(Profile_Membership_Current_Tier__c )), 
&quot;CHAIRMANS LOUNGE PLATINUM ONE&quot;,&quot;Platinum One&quot;, 
&quot;CHAIRMANS LOUNGE&quot;,&quot;&quot;, 
&quot;FF BRONZE&quot;,&quot;Bronze&quot;, 
&quot;FF GOLD&quot;,&quot;Gold&quot;, 
&quot;FF PLATINUM&quot;,&quot;Platinum&quot;, 
&quot;FF PLATINUM ONE&quot;,&quot;Platinum One&quot;, 
&quot;FF SILVER&quot;,&quot;Silver&quot;, 
&quot;QC BRONZE&quot;,&quot;Bronze&quot;, 
&quot;QC SILVER&quot;,&quot;Silver&quot;, 
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier (deprecated)</label>
    <type>Text</type>
</CustomField>