force-app/main/default/objects/Contact/fields/Tier_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Tier_Response_Time__c</fullName>
    <description>QCC: Tier response time based on Frequent Flyer Tier</description>
    <formula>CASE(Frequent_Flyer_Tier__c, &quot;Gold&quot;, &quot;3&quot;, &quot;Silver&quot;, &quot;4&quot;, &quot;Bronze&quot;, &quot;14&quot;, &quot;Non-tiered&quot;, &quot;14&quot;, &quot;2&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Response Time</label>
    <type>Text</type>
</CustomField>