force-app/main/default/objects/Contact/fields/Travel__c.field-meta.xml
<CustomField>
    <fullName>Travel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel</label>
    <type>Checkbox</type>
</CustomField>