force-app/main/default/objects/Contact/fields/Travel_Partner_Offers__c.field-meta.xml
<CustomField>
    <fullName>Travel_Partner_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Partner Offers</label>
    <type>Checkbox</type>
</CustomField>