force-app/main/default/objects/Contact/fields/Verification_Number__c.field-meta.xml
<CustomField>
    <fullName>Verification_Number__c</fullName>
    <description>IATA issued individual agent verification number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Agent IATA Card Verification number</inlineHelpText>
    <label>Verification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>