force-app/main/default/objects/Contact/fields/Year_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Joining__c</fullName>
    <description>QCC: Created to show/store Year the contact joined the Frequent Flyer program.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year of Joining</label>
    <type>Date</type>
</CustomField>