force-app/main/default/objects/Contact/recordTypes/Non_Agency_Contact.recordType-meta.xml
<RecordType>
    <fullName>Non_Agency_Contact</fullName>
    <active>true</active>
    <description>To be used for all contacts.</description>
    <label>Contact</label>
</RecordType>