force-app/main/default/objects/Contact/recordTypes/Placeholder.recordType-meta.xml
<RecordType>
    <fullName>Placeholder</fullName>
    <active>true</active>
    <description>QCC: This is used as a placeholder to attach Cases for non Frequent Flyers. This is not to be treated as a Contact person</description>
    <label>Placeholder</label>
</RecordType>