force-app/main/default/objects/Contact/recordTypes/QAC_contact_us_web_chat.recordType-meta.xml
<RecordType>
    <fullName>QAC_contact_us_web_chat</fullName>
    <active>true</active>
    <description>This Record Type is used in QAC Live Chat</description>
    <label>QAC contact us web chat</label>
</RecordType>