force-app/main/default/objects/Contact/recordTypes/QCC_Individual_Contact.recordType-meta.xml
<RecordType>
    <fullName>QCC_Individual_Contact</fullName>
    <active>true</active>
    <description>To be used for QCC contacts</description>
    <label>Individual Contact</label>
</RecordType>