force-app/main/default/objects/Contact/validationRules/QCC_Restrict_ticking_for_QHAlways_Call.validationRule-meta.xml
<ValidationRule>
    <fullName>QCC_Restrict_ticking_for_QHAlways_Call</fullName>
    <active>true</active>
    <description>Qantas Host Always Call can only be ticked if Contact tier is Chairman&apos;s Lounge or CLPO. But System Administrator can tick any tier.</description>
    <errorConditionFormula>AND(
  $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Qantas System Administrator&quot;,
  $Profile.Name &lt;&gt; &quot;Qantas System Admin - Freight&quot;,
  $Profile.Name &lt;&gt; &quot;Qantas System Admin - QCC&quot;,
  $Profile.Name &lt;&gt; &quot;Qantas System Admin - SND&quot;,
  ISCHANGED(QCC_Qantas_Host_Always_Call__c),
  QCC_Qantas_Host_Always_Call__c, 
AND(
  TEXT(Frequent_Flyer_Tier__c) &lt;&gt; &quot;Chairman&apos;s Lounge&quot;,
  TEXT(Frequent_Flyer_Tier__c) &lt;&gt; &quot;Chairmans Lounge&quot;,
  TEXT(Frequent_Flyer_Tier__c) &lt;&gt; &quot;Chairman&apos;s Lounge Platinum One&quot;,
TEXT(Frequent_Flyer_Tier__c) &lt;&gt; &quot;Chairmans Lounge Platinum One&quot;
  )
)</errorConditionFormula>
    <errorDisplayField>QCC_Qantas_Host_Always_Call__c</errorDisplayField>
    <errorMessage>The Contact must be Chairman&apos;s Lounge Platinum One to receive this service</errorMessage>
</ValidationRule>