force-app/main/default/objects/Contact/validationRules/SnD_Job_Title.validationRule-meta.xml
<ValidationRule>
    <fullName>SnD_Job_Title</fullName>
    <active>true</active>
    <description>S&amp;D users to limit Job Title to less than 50 to avoid downstream iFly impact</description>
    <errorConditionFormula>AND
(OR($User.Profile_Name__c =&apos;QL_Qantas_Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Sales&apos;,$User.Profile_Name__c =&apos;Sales and Distribution-Distribution&apos;, $User.Profile_Name__c =&apos;QL_Sales&apos;), RecordType.DeveloperName=&apos;Non_Agency_Contact&apos;,
LEN(Job_Title__c) &gt; 50)</errorConditionFormula>
    <errorDisplayField>Job_Title__c</errorDisplayField>
    <errorMessage>Job Title has exceeded 50 character limit</errorMessage>
</ValidationRule>